@@ -47,13 +47,14 @@ TEST_CASE( "happy-path-coefficient-strengthening", "[presolve]" )
                                         presolveOptions, num, msg);
    CoefficientStrengthening<double> presolvingMethod{};
    Reductions<double> reductions{};
+
    problem.recomputeAllActivities();
-#ifndef PAPILO_TBB
-   presolveOptions.threads = 1;
-#endif
    problemUpdate.trivialPresolve();
+   problemUpdate.clearChangeInfo();
+
    PresolveStatus presolveStatus =
        presolvingMethod.execute( problem, problemUpdate, num, reductions, t, cause);
+
    // the Constraint x +2y <=2 (x,y in {0,1}) is dominated by x+ y <=1
    REQUIRE( presolveStatus == PresolveStatus::kReduced );
    REQUIRE( reductions.size() == 3 );
