@@ -48,12 +48,10 @@ TEST_CASE( "constraint-propagation-happy-path", "[presolve]" )
                                         presolveOptions, num, msg );
    ConstraintPropagation<double> presolvingMethod{};
    Reductions<double> reductions{};
+
    problem.recomputeAllActivities();
    problemUpdate.trivialPresolve();
-
-#ifndef PAPILO_TBB
-   presolveOptions.threads = 1;
-#endif
+   problemUpdate.clearChangeInfo();
 
    PresolveStatus presolveStatus =
        presolvingMethod.execute( problem, problemUpdate, num, reductions, t, cause );
@@ -107,8 +105,10 @@ TEST_CASE( "constraint-propagation-no-tightening-for-lp", "[presolve]" )
                                         presolveOptions, num, msg );
    ConstraintPropagation<double> presolvingMethod{};
    Reductions<double> reductions{};
+
    problem.recomputeAllActivities();
    problemUpdate.trivialPresolve();
+   problemUpdate.clearChangeInfo();
 
    PresolveStatus presolveStatus =
        presolvingMethod.execute( problem, problemUpdate, num, reductions, t, cause);
